@startuml
interface ObserverInterface {
    + execute()
    + send()
}
class Observer {
    + execute()
    + send()
}

class Subscription {
    - users[]
    - element
}

class Subscriptions {
    - subscriptions[]
}

class User {
    - login
}

abstract class Element {
    # observer
    + changeContent()
}

class Document {
    - documentId
    - documentName
}

class Resource {
    - tag
    - resourceName
}

Document <|-- Element
Resource <|-- Element
Document o-- Subscription
Resource o-- Subscription
User o--"*" Subscription
Resource o-- Observer
Document o-- Observer
ObserverInterface --|> Observer
Subscriptions "*"--o Subscription
Subscriptions --o Observer
@enduml
